--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="dialog_padding">16dp</dimen>
+    <dimen name="dialog_margin">8dp</dimen>
+
     <dimen name="button_padding">10dp</dimen>
 </resources>
