--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBackground">#ffffff</color>
 
     <color name="disabledGrey">#939393</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
