--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
 
+    <dimen name="dialog_warning_icon">90dp</dimen>
+    <dimen name="dialog_warning_padding">40dp</dimen>
+    <dimen name="dialog_warning_guide_line">50dp</dimen>
+    <dimen name="small_padding">5dp</dimen>
+
 </resources>
