--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="navShadeStart">#303F9F</color>
     <color name="navShadeMid">#3F51B5</color>
     <color name="navShadeEnd">#71a4f7</color>
+    <color name="light_bg">#aec9f5</color>
 </resources>
