--- a/app/src/main/res/layout/animals.xml
+++ b/app/src/main/res/layout/animals.xml
@@ -33,7 +33,7 @@
             android:background = "#00ffffff"
             android:src = "@drawable/dropdown_white"/>
 
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id = "@+id/container"
             android:layout_width = "match_parent"
             android:layout_height = "match_parent"
@@ -43,7 +43,7 @@
                 android:layout_width = "match_parent"
                 android:layout_height = "wrap_content"/>
 
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
