--- a/app/src/main/res/layout/residences.xml
+++ b/app/src/main/res/layout/residences.xml
@@ -1,6 +1,12 @@
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="viewModel"
+            type="za.co.aws.welfare.viewModel.HomeViewModel"/>
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activity.HomeActivity"
     android:layout_width="match_parent"
@@ -76,3 +82,4 @@
     </ListView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
