--- a/app/src/main/res/layout/residences.xml
+++ b/app/src/main/res/layout/residences.xml
@@ -47,6 +47,7 @@
                 android:id="@+id/address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@={ viewModel.mResidenceAddressSearch }"
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
