--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,5 +16,6 @@
     <dimen name="dialog_warning_padding">40dp</dimen>
     <dimen name="dialog_warning_guide_line">50dp</dimen>
     <dimen name="small_padding">5dp</dimen>
+    <dimen name="text_gap">5dp</dimen>
 
 </resources>
