--- a/app/src/main/res/layout/residences.xml
+++ b/app/src/main/res/layout/residences.xml
@@ -66,6 +66,10 @@
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <Button
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
@@ -73,7 +77,17 @@
             android:text="@string/search"
             android:drawableLeft="@android:drawable/ic_menu_search"
             android:drawableStart="@android:drawable/ic_menu_search"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"/>
+        </LinearLayout>
     </LinearLayout>
     <ListView
         android:id="@+id/result_residencess"
