--- a/app/src/main/res/layout/content_residence_search_entry.xml
+++ b/app/src/main/res/layout/content_residence_search_entry.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout android:orientation="horizontal"
+    <LinearLayout android:orientation="vertical"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
         <TextView
@@ -66,6 +66,22 @@
             android:layout_marginRight="@dimen/text_gap"/>
         <TextView
             android:id="@+id/lon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search_res_animals"
+            android:textStyle="bold"
+            android:layout_marginEnd="@dimen/text_gap"
+            android:layout_marginRight="@dimen/text_gap"/>
+        <TextView
+            android:id="@+id/animals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
