--- a/app/src/main/res/layout/content_residence_search_entry.xml
+++ b/app/src/main/res/layout/content_residence_search_entry.xml
@@ -11,7 +11,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/street_address"
+            android:text="@string/search_street_address"
             android:textStyle="bold"
             android:layout_marginEnd="@dimen/text_gap"
             android:layout_marginRight="@dimen/text_gap"/>
@@ -27,7 +27,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/shack_id"
+            android:text="@string/search_shack_id"
             android:textStyle="bold"
             android:layout_marginEnd="@dimen/text_gap"
             android:layout_marginRight="@dimen/text_gap"/>
@@ -43,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/latitude"
+            android:text="@string/search_latitude"
             android:textStyle="bold"
             android:layout_marginEnd="@dimen/text_gap"
             android:layout_marginRight="@dimen/text_gap"/>
@@ -59,7 +59,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/longitude"
+            android:text="@string/search_longitude"
             android:textStyle="bold"
             android:layout_marginEnd="@dimen/text_gap"
             android:layout_marginRight="@dimen/text_gap"/>
