Added a cancel edit button. Does not work yet.

--- a/app/src/main/res/layout/activity_view_resident.xml
+++ b/app/src/main/res/layout/activity_view_resident.xml
@@ -6,7 +6,7 @@
             name="viewModel"
             type="za.co.aws.welfare.viewModel.ResidenceViewModel"/>
     </data>
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ScrollView
@@ -82,12 +82,26 @@
         </ScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/cancel_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/cancel"
+            android:layout_gravity="bottom|end"
+            android:visibility="gone"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_above="@+id/edit"
+            android:layout_margin="@dimen/general_padding"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_edit_white_24"
-            android:layout_gravity="bottom|end"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_margin="@dimen/general_padding"/>
-        <!--TODO: ADD FAB TO TRIGGER EDIT-->
-    </FrameLayout>
+
+    </RelativeLayout>
 </layout>
