--- a/app/src/main/res/layout/activity_view_resident.xml
+++ b/app/src/main/res/layout/activity_view_resident.xml
@@ -12,80 +12,121 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="vertical"
-                xmlns:tools="http://schemas.android.com/tools"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:context=".activity.ResidentActivity"
-                android:padding="@dimen/general_padding">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/address_container"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/error_view"
+                    android:visibility="gone"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/search_address"
-                    android:layout_marginBottom="@dimen/general_padding"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/address"
+                    app:layout_constraintTop_toBottomOf="@id/search_menu"
+                    android:padding="@dimen/general_padding">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/empty"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="@dimen/small_padding"/>
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
-                        android:text="@={ viewModel.mAddress }"
-                        android:inputType="text" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/shack_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/search_shack"
-                    android:layout_marginBottom="@dimen/general_padding"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/shack_id"
+                        android:textStyle="bold"
+                        android:text="@string/nothing_to_see"
+                        android:layout_marginBottom="@dimen/small_padding"
+                        android:gravity="center" />
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
-                        android:text="@={ viewModel.mShackID }"
-                        android:inputType="text" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/notes_container"
+                        android:text="@string/res_download_err"
+                        android:layout_marginBottom="@dimen/small_padding"
+                        android:gravity="center"/>
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/rounded_button"
+                        android:textColor="@android:color/white"
+                        android:text="@string/retry"
+                        android:layout_gravity="center_horizontal"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/data_container"
+                    android:orientation="vertical"
+                    xmlns:tools="http://schemas.android.com/tools"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/notes"
-                    android:layout_marginBottom="@dimen/general_padding"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+                    tools:context=".activity.ResidentActivity"
+                    android:padding="@dimen/general_padding">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/notes"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/address_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
-                        android:text="@={ viewModel.mNotes }"
-                        android:inputType="text" />
-                </com.google.android.material.textfield.TextInputLayout>
+                        android:hint="@string/search_address"
+                        android:layout_marginBottom="@dimen/general_padding"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/search_res_animals"/>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/address"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/black"
+                            android:text="@={ viewModel.mAddress }"
+                            android:inputType="text" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.flexbox.FlexboxLayout
-                    android:id="@+id/animal_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/shack_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/search_shack"
+                        android:layout_marginBottom="@dimen/general_padding"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
-                </com.google.android.flexbox.FlexboxLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/shack_id"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/black"
+                            android:text="@={ viewModel.mShackID }"
+                            android:inputType="text" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                <!--animals here todo-->
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/notes_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/notes"
+                        android:layout_marginBottom="@dimen/general_padding"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
-            </LinearLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/notes"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@android:color/black"
+                            android:text="@={ viewModel.mNotes }"
+                            android:inputType="text" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/search_res_animals"/>
+
+                    <com.google.android.flexbox.FlexboxLayout
+                        android:id="@+id/animal_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </com.google.android.flexbox.FlexboxLayout>
+
+                    <!--animals here todo-->
+
+                </LinearLayout>
+            </FrameLayout>
         </ScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
