Added spinner data.

--- a/app/src/main/res/layout/animals.xml
+++ b/app/src/main/res/layout/animals.xml
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/species"/>
             <Spinner
-                android:id="@+id/animal_type"
+                android:id="@+id/species"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
