Started adding a remove animal view to residence edit.

--- a/app/src/main/res/layout/activity_view_resident.xml
+++ b/app/src/main/res/layout/activity_view_resident.xml
@@ -128,9 +128,10 @@
                     <ListView
                         android:id="@+id/remove_animals_list"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
+                        android:divider="?attr/dividerHorizontal"
+                        android:layout_weight="1"
                         android:visibility="gone">
-
                     </ListView>
 
                 </LinearLayout>
