--- a/app/src/main/res/layout/activity_view_resident.xml
+++ b/app/src/main/res/layout/activity_view_resident.xml
@@ -136,7 +136,8 @@
             android:layout_alignParentBottom="true"
             android:divider="?attr/dividerHorizontal"
             android:layout_below="@+id/scroller"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:layout_margin="@dimen/general_padding">
         </ListView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
